--- a/code_samples/bitly/freshdesk/app/index.html
+++ b/code_samples/bitly/freshdesk/app/index.html
@@ -32,6 +32,7 @@
     <div id="stats-container"></div>
   </div>
 <script async src="https://static.freshdev.io/fdk/2.0/assets/fresh_client.js"></script>
+<script src="{{{appclient}}}"></script>
 <script src="scripts/app.js"></script>
 </body>
 </html>
